--- a/client/index.html
+++ b/client/index.html
@@ -16,7 +16,7 @@
 
     <button id="apply-button" class="button">Apply</button>
 
-    <input type="number" min="1">
+    <input id="frames-per-cut-input" type="number" min="1">
 
     <!-- For color dropdown: https://www.w3schools.com/howto/tryit.asp?filename=tryhow_css_js_dropdown_hover-->
 
