--- a/client/index.html
+++ b/client/index.html
@@ -20,10 +20,10 @@
         <label for="frames-per-cut-input">Frames Per Cut</label>
         <input id="frames-per-cut-input" class="input-field" type="number" min="1" value="1">
 
-        <label for="colour-input">Colour</label>
-        <select id="colour-input" class="input-field">
+        <label for="color-input">Color</label>
+        <select id="color-input" class="input-field">
             <option value="0">Violet</option>
-            <option value="1">Iris</option>
+            <option value="1" selected>Iris</option>
             <option value="2">Caribbean</option>
             <option value="3">Lavender</option>
             <option value="4">Cerulean</option>
