Added the customizable options to a toggleable menu. Also added an error message if no clips are selected.

--- a/client/index.html
+++ b/client/index.html
@@ -14,9 +14,13 @@
         <img id="film-icon-3" class="film-icon" src="./assets/vertical_film.png">
     </div>
 
-    <button id="apply-button" class="button">Apply</button>
+    <button id="apply-button" class="apply-button">Apply</button>
+    <button id="options-button" class="options-button">Options
+        <i class="caret"></i>
+    </button>
+    
 
-    <form>
+    <form id="options" style="display: none">
         <label for="frames-per-cut-input">Frames Per Cut</label>
         <input id="frames-per-cut-input" class="input-field" type="number" min="1" value="1">
 
